# CliAgent

./: README.md  debug_flow_structure.py  pyproject.toml  requirements.txt
docs/: implementation.md  plan.md  roadmap.md
src/cliagent/: flow.py  nodes.py
src/cliagent/utils/: call_llm.py  visualize_flow.py
src/theagent/: __main__.py  flow.py  main.py  nodes.py
src/theagent/utils/: call_llm.py  visualize_flow.py
tests/: conftest.py  test_agent_nodes_comprehensive.py  test_agents.py  test_call_llm.py
