[project]
name = "cliagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pocketflow>=0.0.1",
    "python-dotenv>=1.0.0",
    "langchain-openai==0.3.27",
    "pyyaml>=6.0",
    "pytest>=8.4.1",
]

[project.scripts]
cliagent = "cliagent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
